add description about hardware design

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -79,6 +79,12 @@ h6 {
   font-weight: 800;
 }
 
+.img-responsive {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
 .masthead {
   min-height: 30rem;
   position: relative;
